Minor imrprovements to course overview

--- a/course-overview/contents.tex
+++ b/course-overview/contents.tex
@@ -59,7 +59,7 @@
       \item They secure the connection to our internet bank.
       \item Is it a good idea to send
         \begin{center}
-          Enc(\texttt{``Transfer 1000 SEK to account 1234''}, k)
+          Enc(\texttt{``Transfer 1000 SEK from 1234 to 1235''}, k)
         \end{center}
         to the bank?
     \end{itemize}
@@ -174,9 +174,8 @@
 \begin{frame}[fragile]
   \begin{block}{Lecture format}
     \begin{itemize}
-      \item Most on campus
-      \item Some flipped (watch videos before class)
-      \item Some online (participate through Zoom)
+      \item Most on Zoom and campus.
+      \item Some flipped (watch videos, read material before class).
     \end{itemize}
   \end{block}
 
@@ -227,10 +226,12 @@
       \item Cryptanalysis of Ciphertexts
       \item Implement AES (Kattis Problem)
       \item AES presentation
-      \item MANDATORY Seminar (31/1): usability (Sonja)  ON CAMPUS
-      \item MANDATORY Seminar (pick 6/2): Impact considerations around crypto systems (Sonja)  ON CAMPUS
+      \item MANDATORY Seminar: usability (Sonja)  ON CAMPUS
+      \item MANDATORY Seminar: Impact considerations around crypto systems 
+        (Sonja)  ON CAMPUS
       \item MANDATORY Design Considerations (after the impact considerations seminar)
-      \item MANDATORY Lab (20-21/2): Introduction to ProVerif  (Karl and Jesper)  ON CAMPUS
+      \item MANDATORY Lab: Introduction to ProVerif  (Karl and Jesper)  ON 
+        CAMPUS
     \end{itemize}
   \end{block}
 \end{frame}
