Adds another example at the end of course overview

--- a/course-overview/preamble.tex
+++ b/course-overview/preamble.tex
@@ -4,7 +4,7 @@
 \usepackage{booktabs}
 
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
-\addbibresource{bibliography.bib}
+\addbibresource{../project/bibliography.bib}
 
 \usepackage[all]{foreign}
 \renewcommand{\foreignfullfont}{}
