--- a/course-overview/contents.tex
+++ b/course-overview/contents.tex
@@ -305,3 +305,62 @@
     \end{itemize}
   \end{block}
 \end{frame}
+
+\subsection{Introductory example: Parcel boxes (\enquote{postboxes})}
+
+\begin{frame}[fragile]
+  \begin{block}{Scenario: delivering parcels}
+    \begin{itemize}
+      \item Parcels are delivered when recipients are away.
+      \item A shared parcel box (a \enquote{postbox}) stores parcels temporarily.
+      \item A backend coordinates access and notifications.
+    \end{itemize}
+  \end{block}
+
+  \begin{block}{What must the system achieve?}
+    \begin{itemize}
+      \item Only the right person can retrieve the right parcel.
+      \item The delivery company can operate efficiently.
+      \item Disputes can be resolved (\enquote{delivered or not?}).
+      \item The system should leak as little metadata as possible.
+    \end{itemize}
+  \end{block}
+\end{frame}
+
+\begin{frame}[fragile]
+  \begin{example}[What can go wrong?]
+    \begin{itemize}
+      \item Impersonation: attacker pretends to be customer or delivery person.
+      \item Replay: attacker reuses a captured access message.
+      \item Compromise: a box or backend is hacked or tampered with.
+      \item Insider abuse: authorized actors misuse their privileges.
+      \item Privacy leakage: pickup patterns reveal habits, locations, relationships.
+    \end{itemize}
+  \end{example}
+\end{frame}
+
+\begin{frame}[fragile]
+  \begin{block}{Crypto toolbox you need to learn}
+    \begin{itemize}
+      \item Hash functions: identifiers, integrity checks, commitments
+      \item MACs and authenticated encryption: protect tokens and stored data
+      \item Digital signatures: accountability and verifiable records
+      \item Secure channels and key exchange: protect communication with backends
+      \item Key management: provisioning, rotation, revocation, trust anchors
+      \item Randomness and nonces: freshness, replay resistance, safe protocols
+    \end{itemize}
+  \end{block}
+\end{frame}
+
+\begin{frame}[fragile]
+  \begin{block}{Course topics $\rightarrow$ scenario needs}
+    \begin{description}
+      \item[Confidentiality] parcel details and access data
+      \item[Integrity] tokens, logs, and device state
+      \item[Authentication] customer and delivery identities
+      \item[Authorization] who may open which compartment, when
+      \item[Accountability] audit trails and dispute handling
+      \item[Privacy] minimize metadata leakage and linkability
+    \end{description}
+  \end{block}
+\end{frame}
