Fixes minted to compile for TeXLive 2025

--- a/course-overview/preamble.tex
+++ b/course-overview/preamble.tex
@@ -23,7 +23,7 @@
 
 \let\email\texttt
 
-\usepackage[outputdir=ltxobj]{minted}
+\usepackage{minted}
 \setminted{autogobble}
 
 \usepackage{pythontex}
