--- a/modules/week-1/ciphers-lecture/preamble.tex
+++ b/modules/week-1/ciphers-lecture/preamble.tex
@@ -1,11 +1,22 @@
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[swedish,british]{babel}
+\usepackage[swedish,ibycus,british]{babel}
+\usepackage{float}
+\makeatletter
+\@ifclassloaded{beamer}{\relax}{\usepackage[inline]{enumitem}}
+\makeatother
 
 \usepackage{noweb}
-\noweboptions{breakcode,longchunks,longxref}
-
 \usepackage{booktabs}
+
+\usepackage[
+  natbib,
+  style=verbose,
+  citestyle=verbose,
+  singletitle=false,
+  maxbibnames=99,
+]{biblatex}
+\addbibresource{bibliography.bib}
+\addbibresource{crypto.bib}
 
 \usepackage[all]{foreign}
 \renewcommand{\foreignfullfont}{}
@@ -14,38 +25,67 @@
 %\usepackage{newclude}
 \usepackage{import}
 
-% didactic provides the semantic environments.
-\usepackage{didactic}
-
-% Quotes.
-\usepackage{csquotes}
-
-% Hyperlinks. Beamer may load hyperref early, so avoid option clashes.
-\makeatletter
-\@ifpackageloaded{hyperref}{%
-  \hypersetup{colorlinks=true}%
-}{%
-  \usepackage[colorlinks]{hyperref}%
-}
-\makeatother
-
-\usepackage{acro}
+\usepackage[strict]{csquotes}
+\usepackage[single]{acro}
 
 \usepackage{subcaption}
 
+\usepackage[noend]{algpseudocode}
 \usepackage{xparse}
 
 \let\email\texttt
 
-\usepackage{amsmath}
-\newcommand{\Enc}{\mathsf{Enc}}
-\newcommand{\Dec}{\mathsf{Dec}}
-\usepackage{mathtools}
+%\usepackage[outputdir=ltxobj]{minted}
+\usepackage{minted}
+\setminted{autogobble,linenos}
+\newminted{haskell}{linenos=false}
 
-\usepackage{thmtools}
+\usepackage[makestderr]{pythontex}
+\setpythontexoutputdir{.}
+\setpythontexworkingdir{..}
+
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{mathtools}
+\usepackage{amsthm}
+\usepackage{thmtools,thm-restate}
 \usepackage[unq]{unique}
 \DeclareMathOperator{\powerset}{\mathcal{P}}
 
-\usepackage{siunitx}
+\usepackage[binary-units]{siunitx}
 
-\usepackage{cleveref}
+\makeatletter
+\@ifclassloaded{beamer}
+  {\relax}
+  {\usepackage[colorlinks]{hyperref}}
+\makeatother
+
+\usepackage[marginparmargin=outer]{didactic}
+\ProvideSemanticEnv{lo}{Learning Objective}
+  [style=definition,numbered=yes]
+  {LO}{LO}
+  {Learning objective}{Learning objectives}
+\ProvideTranslation{british}{Learning Objective}{Learning Objective}
+\ProvideTranslation{british}{LO}{LO}
+\ProvideTranslation{british}{Learning objective}{Learning objective}
+\ProvideTranslation{british}{Learning objectives}{Learning objectives}
+\ProvideTranslation{swedish}{Learning Objective}{Lärandemål}
+\ProvideTranslation{swedish}{LO}{lm}
+\ProvideTranslation{swedish}{Learning objective}{Lärandemål}
+\ProvideTranslation{swedish}{Learning objectives}{Lärandemål}
+\ExecuteBibliographyOptions{url=true}
+
+\NewDocumentCommand{\web}{}{\textsc{web}}
+\NewDocumentCommand{\cweb}{}{\textsc{cweb}}
+\NewDocumentCommand{\noweb}{}{\textsc{noweb}}
+
+\usepackage{bibsp}
+\NewFunction{\Enc}{Enc}
+\NewFunction{\Dec}{Dec}
+\NewSet{\M}{M}
+\NewSet{\C}{C}
+\NewSet{\K}{K}
+\NewSet{\E}{E}
+\NewSet{\D}{D}
+
+%\usepackage[capitalize]{cleveref}
