Updates ciphers lecture contents

--- a/modules/week-1/ciphers-lecture/abstract.tex
+++ b/modules/week-1/ciphers-lecture/abstract.tex
@@ -16,8 +16,8 @@ After this lecture, you should be able
 \begin{itemize}
   \item to explain what symmetric (shared-key) encryption is and what it can
     and cannot guarantee;
-  \item to describe why ECB leaks patterns and why CBC/CTR with an IV/nonce avoids
-    this;
+  \item to describe why ECB leaks patterns and how common modes (CBC/CTR/CFB/OFB)
+    with an IV/nonce avoid this;
   \item to explain the purpose of IVs/nonces and what can go wrong if they are
     misused;
   \item to perform basic cryptanalysis of Caesar and Vigen\`ere ciphers.
