--- a/modules/week-1/ciphers-lecture/preamble.tex
+++ b/modules/week-1/ciphers-lecture/preamble.tex
@@ -54,6 +54,9 @@
 
 \usepackage[binary-units]{siunitx}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning,arrows.meta,calc}
+
 \makeatletter
 \@ifclassloaded{beamer}
   {\relax}
