MAkes spn figure flushright

--- a/modules/week-1/ciphers-lecture/contents.tex
+++ b/modules/week-1/ciphers-lecture/contents.tex
@@ -1189,6 +1189,7 @@ rounds.
       Each round applies substitution (S-boxes) for confusion and permutation 
       (P-boxes) for diffusion, with round keys mixed in.
     }[fig:spn]
+      \flushright
       \includegraphics[width=0.7\linewidth]{figs/spn.png}
     \end{sidecaption}
   \end{figure}
