Updates didactic package

--- a/modules/week-2/lecture-hash-functions/preamble.tex
+++ b/modules/week-2/lecture-hash-functions/preamble.tex
@@ -21,6 +21,8 @@
 \NewFunction{\Dec}{Dec}
 \NewFunction{\HMAC}{HMAC}
 
+\usepackage{didactic}
+
 \usepackage{tikz}
 \usetikzlibrary{arrows}
 \usepackage{cleveref}
