Removes some theoretical slides from hash functions

--- a/modules/week-2/lecture-hash-functions/contents.tex
+++ b/modules/week-2/lecture-hash-functions/contents.tex
@@ -186,7 +186,17 @@
   \end{definition}
 \end{frame}
 
-\mode<all>{\includepdf[pages=10-29]{./dog-hash-tilkry24.pdf}}
+\mode<all>{\includepdf[pages=10-24]{./dog-hash-tilkry24.pdf}}
+
+\begin{frame}
+  \begin{remark}
+    \begin{itemize}
+      \item We can prove similar results for second-preimage and collision 
+        resistance.
+      \item Collision resistance implies the other two.
+    \end{itemize}
+  \end{remark}
+\end{frame}
 
 \subsection{Hash functions in practice}
 
@@ -208,7 +218,7 @@
   \end{example}
 \end{frame}
 
-\mode<all>{\includepdf[pages=30-39]{./dog-hash-tilkry24.pdf}}
+\mode<all>{\includepdf[pages=29-39]{./dog-hash-tilkry24.pdf}}
 
 \begin{frame}
   \begin{remark}
